@@ -23,6 +23,8 @@
  ~ XML structure of multi-layer custom maps sources has changed
  + BeanShell map sources can be used if placed in the "mapsources" 
     sub-directory
+ + All direcories used by MOBAC can be pre-configured via file 
+    directories.ini in the MOBAC program directory
 
  1.8 final: (2010-10-31)
  + New map source: New Zealand Topographic Maps
